# Time-V2

./: .breakpoints  README.md  Text.md  setup.cfg
src/: TimerModule.py
src/OscarsTime.egg-info/: PKG-INFO  SOURCES.txt
src/OscarsTime2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/TimeV2/: time2.py
src/time2/: time2.py
