[metadata]
name = TimeV2
version = 0.0.1
author = Oscar Hogben
author_email = oscarhogben@gmail.com
description = An improved time module
long_description = file: Text.md
long_description_content_type = text/markdown
url = https://github.com/Oscar-Hogben/Time-V2
project_urls =
    Bug Tracker= https://github.com/Oscar-Hogben/Time-V2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src